--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1013,3 +1013,54 @@ body.help-center header.site-header.business-header, body.ask-bob header.site-he
 
 
 /*-- Popup Css --*/ 
+
+
+
+
+
+
+/*-- Popup Form Css --*/ 
+
+.ReactModal__Overlay .ReactModal__Content.lifetime-form {
+    background: #fff;
+    width: 400px;
+    position: fixed;
+    padding: 30px;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form input, .ReactModal__Overlay .ReactModal__Content.lifetime-form textarea {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #ddd;
+    border-radius: 0;
+    padding: 15px;
+    font-size: 14px;
+    color: #000;
+    outline: 0;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form textarea {
+    height: 150px;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form .form-feild {
+    margin-bottom: 15px;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form input:focus, .ReactModal__Overlay .ReactModal__Content.lifetime-form textarea:focus {
+    border-color: #ed1b24;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form .form-button {
+    margin: 0;
+    justify-content: flex-start;
+}
+.ReactModal__Overlay .ReactModal__Content.lifetime-form p.error-msg {
+    position: absolute;
+    left: 0;
+    font-size: 13px;
+    padding: 5px 0;
+    width: 100%;
+    text-align: center;
+    background: #ed1b24;
+    color: #fff;
+}
+
+
+
+/*-- Popup Form Css --*/ 
