--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -970,6 +970,9 @@ body.help-center header.site-header.business-header, body.ask-bob header.site-he
     font-size: 22px;
     font-weight: 600;
 }
+.ask-bob #chipbot-app {
+    display: none;
+}
 
 /*-- Ask BoB Css --*/ 
 
@@ -1064,3 +1067,97 @@ body.help-center header.site-header.business-header, body.ask-bob header.site-he
 
 
 /*-- Popup Form Css --*/ 
+
+
+
+
+
+/*-- Chat GPT Popup Css --*/ 
+
+
+.ask-bob .ReactModal__Overlay .ReactModal__Content {
+    width: 400px;
+    margin: 0 auto;
+    height: auto;
+    inset: unset !important;
+    left: auto !important;
+    right: 40px !important;
+    top: auto !important;
+    overflow: hidden !important;
+    bottom: 120px !important;
+    padding: 0 !important;
+    border: 0 !important;
+    border-radius: 10px !important;
+    background: #F8F9FC !important;
+    box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.17) !important;
+}
+.ask-bob .ReactModal__Overlay {
+    background: transparent !important;
+    z-index: 999;
+    position: fixed !important;
+    top: 0 !important;
+    right: 0 !important;
+}
+.gpt-btns img.abxo {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    cursor: pointer;
+}
+.gpt-btns img.abxo.close {
+    display: none;
+}
+.ReactModal__Body--open img.abxo.open {
+    display: none;
+}
+.ReactModal__Body--open img.abxo.close {
+    display: block;
+}
+.gpt-header {
+    display: flex;
+    background: #ed1b24;
+    align-items: center;
+    gap: 20px;
+    padding: 15px;
+}
+.gpt-header img {
+    width: 50px;
+    height: 50px;
+}
+.gpt-header h4 {
+    margin: 0;
+    color: #fff;
+    font-weight: 600;
+}
+.gpt-send-msg {
+    display: flex;
+    position: relative;
+}
+.gpt-send-msg textarea {
+    width: 100%;
+    border: 0;
+    outline: 0;
+    padding: 28px 20px;
+    height: 80px !important;
+    font-size: 14px;
+    color: #000;
+}
+.gpt-send-msg textarea::placeholder {
+    color: #000;
+}
+.gpt-send-msg button {
+    background: transparent !important;
+    border: 0;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+.gpt-body-msg {
+    background: #eaeaea;
+    padding: 40px 20px;
+}
+
+
+/*-- Chat GPT Popup Css --*/ 
