--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1103,6 +1103,8 @@ body.help-center header.site-header.business-header, body.ask-bob header.site-he
     right: 30px;
     bottom: 30px;
     cursor: pointer;
+    box-shadow: 0px 0 30px 0px rgb(255 255 255 / 33%);
+    border-radius: 50%;
 }
 .gpt-btns img.abxo.close {
     display: none;
